# discord-math-bot

./: Cargo.toml  README.md  wolframscript_wrapper.sh
api/: Cargo.toml
api/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
discord_bot/: Cargo.toml
discord_bot/src/: commands.rs  error_handler.rs  main.rs
mathematica/: Cargo.toml
mathematica/src/: image_format.rs  latex.rs  latex_to_image.sh  lib.rs  wolframscript_wrapper.sh
mathematica/src/latex/: processor.rs
