[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
tokio = { version = "1.30.0", features = ["full"] }
mathematica = { path = "../mathematica" }
anyhow = "1.0.72"
